# Quasar

./: CMakeLists.txt  README.md
cmake/macros/: Copy.cmake  HeadersDirectories.cmake  ProjectGenerator.cmake
dep/windows/lib/: glfw3dll.lib
src/: common.h  main.cpp  opengl.h
src/App/: App.cpp  App.h
src/Camera/: Camera.cpp  Camera.h
src/Planet/: Planet.cpp  Planet.h  PlanetQuad.cpp  PlanetQuad.h
src/Shader/: ComputeProgram.cpp  ComputeProgram.h  RenderProgram.cpp  RenderProgram.h  ShaderProgram.cpp  ShaderProgram.h
src/Utils/: Singleton.h
src/glsl/: planet_fs.glsl  planet_tcs.glsl  planet_tes.glsl  planet_vs.glsl
